# vcpkg-boilerplate

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  general-tests.cpp
